update text and other small tweaks

--- a/subpages/what-we-do-law.jade
+++ b/subpages/what-we-do-law.jade
@@ -24,11 +24,11 @@ block content
 				.sidebar
 					h4 How we can help
 					ul
-						li IRS and State Tax Audits and Appeals
-						li Offer in Compromise and Lien Release
-						li Tax Litigation
+						li IRS and state tax audits and appeals
+						li Offer in compromise and lien release
+						li Tax litigation
 				.page-content
-					h3 Tax Controversies and Litigation
+					h3 Tax controversies and litigation
 					p JC&amp;Company represents clients in all aspects of controversies with the federal, state and local tax authorities. We handle audits, coordinated exams, administrative appeals, and both civil and criminal tax cases in federal and state courts.
 
 
@@ -37,20 +37,20 @@ block content
 					h4 How we can help
 					ul
 						li Wills
-						li Revocable Living Trusts
-						li ILITs, QTIP, GRAT, IDGT and Trust Administration
+						li Revocable living trusts
+						li ILITs, QTIP, GRAT, IDGT and trust administration
 
 				.page-content
-					h3 Trust and Estate Tax Planning
+					h3 Trust and estate tax planning
 					p Our trust and estate planning practice concentrates on using innovative planning techniques to fulfill our clients&rsquo; need, goals, and to reduce and eliminate taxes We assist our clients in planning trusts and estates, conveying the family owned corporations and other business interests to children, making charitable donations, and administering their trusts and estates.
 
 			.page-container
 				.sidebar
 					h4 How we can help
 					ul
-						li Drafting Contracts and Agreement
-						li Entity Selection and Formation
-						li Business Immigration (H -1B, L-1, E-2, Green Card, etc)
+						li Drafting contracts and agreement
+						li Entity selection and formation
+						li Business immigration (H -1B, L-1, E-2, Green Card, etc)
 				.page-content
 					h3 Immigration
 					p A successful business depends largely upon careful preparation and execution of business with appropriate legal advice. We assist our clients on every aspect of their business, ranging from drafting agreements on day&ndash;to&ndash;day operation to handling their immigration matters. 
