--- a/subpages/what-we-do-tax.jade
+++ b/subpages/what-we-do-tax.jade
@@ -24,29 +24,29 @@ block content
 				.sidebar
 					h4 How we can help
 					ul
-						li Tax Compliance and Preparation
-						li Tax Research and Strategic Tax Planning
-						li International Tax Planning and Compliance
-						li M&amp;A Tax Planning and Analysis
-						li Transfer Pricing
-						li Cost Segregation
+						li Tax compliance and preparation
+						li Tax research and strategic tax planning
+						li International tax planning and compliance
+						li M&amp;A tax planning and analysis
+						li Transfer pricing
+						li Cost segregation
 						li R&amp;D and other business tax credits
-						li IFRS Tax Accounting
-						li SEC Tax Accounting
-						li State and Local Taxes
-						li Representation before the IRS and other Tax Authorities
-						li Trust and Estate Tax Planning
+						li IFRS tax accounting
+						li SEC tax accounting
+						li State and local taxes
+						li Representation before the IRS and other tax authorities
+						li Trust and estate tax planning
 						li FBAR/FATCA
-						li R&amp;D Tax Credit
-						li Enterprise Zone
-						li Other Tax Inventives
+						li R&amp;D tax credit
+						li Enterprise zone
+						li Other tax inventives
 
 				.page-content
 					p At JC&amp;Company, we provide high quality services which emphasizes proactive, creative tax analysis, and year-round tax planning. We are focused on identifying and maximizing clients' federal, state and international tax-saving opportunities. We have a wide scope of tax expertise second to none in our target markets, which gives our tax practice a span of focus rarely found servicing middle market companies and their owners. We also serve a variety of personal tax planning and compliance needs for various corporate executives and high net worth individuals.
 
 
 
-					h3 Tax Compliance and Strategy &ndash; We Advise and We Plan
+					h3 Tax Compliance and Strategy &rsdash; We Advise and We Plan
 
 					p.last-of-page We use our experience and expertise to be proactive business professionals for our clients; an integral part of the company management team. We think strategically, lawfully, and aggressively for improved client performance.
 
