--- a/subpages/who-we-are-clients.jade
+++ b/subpages/who-we-are-clients.jade
@@ -20,48 +20,48 @@ block content
 
 
 			.image-list
-				img(src='img/clients/01.png', alt='')
-				img(src='img/clients/02.png', alt='')
-				img(src='img/clients/03.png', alt='')
-				img(src='img/clients/04.png', alt='')
-				img(src='img/clients/05.png', alt='')
-				img(src='img/clients/06.png', alt='')
-				img(src='img/clients/07.png', alt='')
-				img(src='img/clients/08.png', alt='')
-				img(src='img/clients/09.png', alt='')
-				img(src='img/clients/11.png', alt='')
-				img(src='img/clients/12.png', alt='')
-				img(src='img/clients/13.png', alt='')
-				img(src='img/clients/14.png', alt='')
-				img(src='img/clients/15.png', alt='')
-				img(src='img/clients/16.png', alt='')
-				img(src='img/clients/17.png', alt='')
-				img(src='img/clients/18.png', alt='')
-				img(src='img/clients/19.png', alt='')
-				img(src='img/clients/20.png', alt='')
-				img(src='img/clients/21.png', alt='')
-				img(src='img/clients/22.png', alt='')
-				img(src='img/clients/23.png', alt='')
-				img(src='img/clients/24.png', alt='')
-				img(src='img/clients/25.png', alt='')
-				img(src='img/clients/26.png', alt='')
-				img(src='img/clients/28.png', alt='')
-				img(src='img/clients/29.png', alt='')
-				img(src='img/clients/30.png', alt='')
-				img(src='img/clients/31.png', alt='')
-				img(src='img/clients/32.png', alt='')
-				img(src='img/clients/33.png', alt='')
-				img(src='img/clients/34.png', alt='')
-				img(src='img/clients/36.png', alt='')
-				img(src='img/clients/37.png', alt='')
-				img(src='img/clients/38.png', alt='')
-				img(src='img/clients/39.png', alt='')
-				img(src='img/clients/40.png', alt='')
-				img(src='img/clients/41.png', alt='')
-				img(src='img/clients/42.png', alt='')
-				img(src='img/clients/43.png', alt='')
-				img(src='img/clients/44.png', alt='')
-				img(src='img/clients/45.png', alt='')
+				img(src='images/clients/01.png', alt='')
+				img(src='images/clients/02.png', alt='')
+				img(src='images/clients/03.png', alt='')
+				img(src='images/clients/04.png', alt='')
+				img(src='images/clients/05.png', alt='')
+				img(src='images/clients/06.png', alt='')
+				img(src='images/clients/07.png', alt='')
+				img(src='images/clients/08.png', alt='')
+				img(src='images/clients/09.png', alt='')
+				img(src='images/clients/11.png', alt='')
+				img(src='images/clients/12.png', alt='')
+				img(src='images/clients/13.png', alt='')
+				img(src='images/clients/14.png', alt='')
+				img(src='images/clients/15.png', alt='')
+				img(src='images/clients/16.png', alt='')
+				img(src='images/clients/17.png', alt='')
+				img(src='images/clients/18.png', alt='')
+				img(src='images/clients/19.png', alt='')
+				img(src='images/clients/20.png', alt='')
+				img(src='images/clients/21.png', alt='')
+				img(src='images/clients/22.png', alt='')
+				img(src='images/clients/23.png', alt='')
+				img(src='images/clients/24.png', alt='')
+				img(src='images/clients/25.png', alt='')
+				img(src='images/clients/26.png', alt='')
+				img(src='images/clients/28.png', alt='')
+				img(src='images/clients/29.png', alt='')
+				img(src='images/clients/30.png', alt='')
+				img(src='images/clients/31.png', alt='')
+				img(src='images/clients/32.png', alt='')
+				img(src='images/clients/33.png', alt='')
+				img(src='images/clients/34.png', alt='')
+				img(src='images/clients/36.png', alt='')
+				img(src='images/clients/37.png', alt='')
+				img(src='images/clients/38.png', alt='')
+				img(src='images/clients/39.png', alt='')
+				img(src='images/clients/40.png', alt='')
+				img(src='images/clients/41.png', alt='')
+				img(src='images/clients/42.png', alt='')
+				img(src='images/clients/43.png', alt='')
+				img(src='images/clients/44.png', alt='')
+				img(src='images/clients/45.png', alt='')
 
 block scripts
 	script.
