--- a/inc.nav.jade
+++ b/inc.nav.jade
@@ -15,12 +15,12 @@
 	.container
 		ul.nav
 			li
-				a.link-who-we-are(href="who-we-are-overview.html") Who We Are
+				a.link-who-we-are(href="who-we-are-overview.html") Who we are
 			li
-				a.link-what-we-do(href="what-we-do-assurance.html") What We Do
+				a.link-what-we-do(href="what-we-do-assurance.html") What we do
 			li
 				a.link-newsroom(href="newsroom.html") Newsroom
 			li
 				a.link-careers(href="careers.html") Careers
 			li
-				a.link-contact-us(href="contact-us.html") Contact Us
+				a.link-contact-us(href="contact-us.html") Contact us
