--- a/subpages/who-we-are-overview.jade
+++ b/subpages/who-we-are-overview.jade
@@ -14,7 +14,7 @@ block content
 				a(href='who-we-are-testimonials.html') Testimonials
 
 			.subpage-intro
-				p Led by former Big 4 management teams and combined with support from other Big 4 professionals, JC&amp;Company is dedicated to providing its clients with the quality and expertise they would expect from Big 4.
+				p Led by former Big 4 management teams and from other professionals, JC&amp;Company is dedicated to providing its clients with the quality and expertise they would expect from major law and accounting firms.
 				img(src="img/subpages/soil.jpg")
 
 
@@ -24,9 +24,9 @@ block content
 
 			p The scope of our involvement with our clients does not just extend to issues that may arise during the course of complex and global business transactions; it extends to day-to-day affairs where we counsel clients on business and legal needs on a microscopic level. Our clients have come to rely upon our seamless service and know that they can contact our firm day or night for customized solutions to any problem.
 
-			h3 Big 4 Quality Service with Affordable Professional Cost
+			h3 The Highest Quality Service with Affordable Professional Cost
 
-			p A professional firm is known for the quality of its service. We are professionals seriously trained as core members of the management team in the U.S. Big 4 Firms for over 20 years. We make certain that the quality of our services at Big 4 are reasonable, and at a fee of a non-Big 4 practices.
+			p A professional firm is known for the quality of its service. We are professionals who were trained as core members of the management team in major U.S. professional firms for over 20 years. We make certain the quality of our services at the highest standard, but at much flexible and affordable fee structure.
 
 
 
