update style and feed scripts

--- a/styles/social-wall.styl
+++ b/styles/social-wall.styl
@@ -98,6 +98,7 @@
 .stream li .section-title a {
 	color: #d15c09;
 	font-size:14px;
+	word-wrap:break-word;
 }
 .stream li .section-title a:hover {
 	color: #2DB6E8;
