fix typos, make updates, bring back testimonials on Startup page

--- a/index.jade
+++ b/index.jade
@@ -26,7 +26,7 @@ block content
 						a(href='what-we-do-tax.html').details Details &gt;
 					img(src="img/slide_tax.jpg" alt="")
 
-				.slide
+				//- .slide
 					.slide-text
 						.title Advisory
 						.desc We leverage our experience and industry expertise to maximize value and minimize risk during acquisitions, litigation, corporate reorganization and other major business transactions and transitions.
@@ -57,8 +57,8 @@ block content
 
 				.slide
 					.slide-text
-						.title JC Wealth Management
-						.desc JC Wealth management helps our clients work towards and maintain financial prosperity by implementing strategies that seek to maximize the growth, preservation and tax efficient transfer of corporate and personal wealth.
+						.title Wealth Management
+						.desc Wealth management helps our clients work towards and maintain financial prosperity by implementing strategies that seek to maximize the growth, preservation and tax efficient transfer of corporate and personal wealth.
 						a(href='http://jcwealthmgnt.com').details Details &gt;
 					img(src="img/slide_wealth.jpg", alt="")
 
