--- a/subpages/careers.jade
+++ b/subpages/careers.jade
@@ -26,7 +26,7 @@ block content
 								td JC&amp;Company LLP<br>Human Resources Department<br>10 Corporate Park, Ste. 210,<br>Irvine, CA 92606
 
 				li.second
-					p At JC&amp;Company, our people drive our passion for the business. Discover a place where you’ll work with a team of professionals dedicated to providing bold leadership and distinctive client service. Spend each day engaged in meaningful and challenging work.
+					p At JC&amp;Company, our people drive our passion for the business. Discover a place where you&rsquo;ll work with a team of professionals dedicated to providing bold leadership and distinctive client service. Spend each day engaged in meaningful and challenging work.
 				li.third
 					p We offer a diverse and collaborative environment that respects individual needs and promotes ongoing development.
 
