--- a/subpages/what-we-do-asian.jade
+++ b/subpages/what-we-do-asian.jade
@@ -27,7 +27,7 @@ block content
 						li Compliance with multiple tax jurisdictions
 						li Implementation of transfer pricing policies
 						li IFRS conversion
-						li Initial Public Offerings (IPOs) in U.S. or Asian Markets.
+						li Initial public offerings (IPOs) in U.S. or asian markets.
 						li Due diligence and structuring advice in cross-border M&amp;A
 
 
