--- a/subpages/what-we-do-law.jade
+++ b/subpages/what-we-do-law.jade
@@ -50,7 +50,7 @@ block content
 					ul
 						li Drafting contracts and agreement
 						li Entity selection and formation
-						li Business immigration (H -1B, L-1, E-2, Green Card, etc)
+						li Business immigration (H&mdash;1B, L&mdash;1, E&mdash;2, Green Card, etc)
 				.page-content
 					h3 Immigration
 					p A successful business depends largely upon careful preparation and execution of business with appropriate legal advice. We assist our clients on every aspect of their business, ranging from drafting agreements on day&ndash;to&ndash;day operation to handling their immigration matters. 
