--- a/subpages/what-we-do-startup.jade
+++ b/subpages/what-we-do-startup.jade
@@ -34,13 +34,25 @@ block content
 
 
 				.page-content
-					p At JC&amp;Company, we provide assistance to companies faced with opportunities for growth such as a merger or acquisition, or critical challenges such as fraud, litigation or reorganization. Our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the firm&rsquo;s clients grow their businesses, improve their performance, and manage risk more effectively. We serve companies throughout the business lifecycle, helping them in their efforts to emerge stronger and smarter.
 
 					h3 We bring deep Startup expertise to our clients
 
 					p At JC&amp;Company, we provide assistance to companies encountering opportunities for growth such as a merger or acquisition, or critical challenges such as fraud, litigation or reorganization. Our professionals combine technical, market, and business skills that allow them to deliver objective advice and guidance that help the firm&rsquo;s clients grow their businesses, improve their performance, and manage risk more effectively. We serve companies throughout the business lifecycle, helping them in their efforts to emerge stronger and smarter.
 
+				
+				.blockquote 
 
+					P As CEO of a startup company from Korea, I really needed strong and confident guidance on how to deal with all the legal and accounting matters that my company was facing in the U.S., as well as general business convention and culture in Silicon Valley area. JC&amp;Company was there and we are more than satisfied with their service. They are knowledgeable, dependable and really attentive. In addition, they were really resourceful, because they are both law and accounting firm and we can get the one-stop legal and accounting service from them. Needless to say, it worked so efficiently so far and saved our time and costs. 
+					cite Sunguk Moon, CEO, Teamblind Inc
+
+					p I was really glad that I finally found a law firm I can trust and depend on, and JC&amp;Company helped us a lot in both legal and accounting side when we opened our U.S. subsidiary. We did not have much resource regarding U.S. market although we have good track record in Korean and Asian market. We look forward to the continuing business alliance with them going forward.  
+					cite Yeonji Lee, Manager, AfreecaTV Co., Ltd
+
+					p I knew JC&amp;Company since I worked at PWC Korea as we worked together on numerous U.S. cross border tax projects. I moved to Coupang afterwards, and when we needed tax advisors for our business expand to the U.S., I did not have any second thought other than to reach out to them, and we are happy to have them as our partner. 
+					cite John Kim, Director of Global Tax, Coupang
+
+					p We engaged JC&amp;Company for our due diligence project in the United States for our M&amp;A project. We were able to see all the important checkpoints in legal, accounting and tax aspects, and we appreciate their service. 
+					cite YongHwan Kim, Director, SmileGate Holdings
 
 block scripts
 	script.
