--- a/subpages/what-we-do-tax.jade
+++ b/subpages/what-we-do-tax.jade
@@ -46,7 +46,7 @@ block content
 
 
 
-					h3 Tax Compliance and Strategy &rsdash; We Advise and We Plan
+					h3 Tax Compliance and Strategy &mdash; We Advise and We Plan
 
 					p.last-of-page We use our experience and expertise to be proactive business professionals for our clients; an integral part of the company management team. We think strategically, lawfully, and aggressively for improved client performance.
 
