--- a/subpages/what-we-do-wealth.jade
+++ b/subpages/what-we-do-wealth.jade
@@ -37,9 +37,19 @@ block content
 				.page-content
 					p We are committed to maintaining the highest standards of integrity and professionalism and seek to provide our clients with excellent service and results. Our licensed wealth advisor will utilize a holistic financial approach by reviewing your wealth management positions. This approach can help you take charge of your finances through a comprehensive plan. Our mission is to deliver objective and honest advice to our clients and serve as their family wealth guardians. As a financial caretaker, we foster interaction and engagement with all of our client family members who seek to secure their wealth for generations.
 
-					h3 We are a global network of bilingual professionals
+					h3 Trust
+					p Strong relationships are built on trust by; <br> Providing advice that is objective and forthright; <br> Having transparency that builds an openness of communication; and <br> Being proactive to disclose any conflicts of interest.
 
-					p.last-of-page Our professionals are dedicated to providing personalized service for our Asian clients around the world. We are made up of experienced men and women with in-depth knowledge of both the Americas and Asian corporate environments, gained through hands-on experience of serving major clients. With substantial experience with many reputable Asian companies, JC&amp;Company&rsquo;s professionals understand the relationships between U.S. operations, foreign parent companies, and global affiliates, and can provide a broad range of Audit, Tax and Advisory services to Asian companies operating in the U.S.
+					h3 Caring
+					p We care about you and your family with the same passion as we do our own family by: <br> Fostering interaction and engagement; <br> Providing advice that is not encumbered by self-interest; and <br> Creating a consultative experience that is based on honesty.
+
+					h3 Integrity
+					p We approach our work and relationships with personal integrity by: <br> Demonstrating trustworthiness in our actions and words; <br> Showing our respect for each other, our clients and the firm; and <br> Sharing a collective commitment to excellence and openness to listen, understand and respond.
+
+					h3 Commitment
+					p We are committed to creating a best-in-class memorable experience by: <br> Delivering a five-star client service commitment that goes above and beyond; <br> Aligning with strategic partners that must adhere to our high quality standards; and <br> Having unwavering independence.
+
+					p.last-of-page 
 
 block scripts
 	script.
