startup page fix

--- a/subpages/who-we-are-testimonials.jade
+++ b/subpages/who-we-are-testimonials.jade
@@ -52,7 +52,7 @@ block content
 						p <small>Rancho Santa Margarita, CA</small>
 
 					.right-col
-						p 	&ldquo;JC&amp;JC&amp;Company helped us for two years, and I have worked with them before in other capacities as well. I can say without hesitation that they are not only technically proficient and highly competent; they are practical problem-solvers extraordinaire. With their help, we were able to get through a tough IRS examination, finally closed with no adjustment proposed by the agent. They are timely, professional, and they take our interests to heart. They are a true partner in our mission.&rdquo;
+						p 	&ldquo;JC&amp;Company helped us for two years, and I have worked with them before in other capacities as well. I can say without hesitation that they are not only technically proficient and highly competent; they are practical problem-solvers extraordinaire. With their help, we were able to get through a tough IRS examination, finally closed with no adjustment proposed by the agent. They are timely, professional, and they take our interests to heart. They are a true partner in our mission.&rdquo;
 						cite Tony Chung / Chief Financial Officer
 
 
@@ -156,7 +156,7 @@ block content
 						p <small>Seoul, Korea</small>
 
 					.right-col
-						p 	&ldquo;I knew JC&amp;Company since I worked at PWC Korea as we worked together on numerous U.S. cross border tax projects. I moved to Coupang afterwards, and when we needed tax advisors for our business expand to the U.S., I did not have any second thought other than to reach out to them, and we are happy to have them as our partner.&rdquo;
+						p 	&ldquo;I knew JC&amp;Company since I worked at PwC Korea as we worked together on numerous U.S. cross border tax projects. I moved to Coupang afterwards, and when we needed tax advisors for our business expand to the U.S., I did not have any second thought other than to reach out to them, and we are happy to have them as our partner.&rdquo;
 						cite John Kim / Director of Global Tax
 
 				li
