--- a/index.jade
+++ b/index.jade
@@ -45,7 +45,7 @@ block content
 					.slide-text
 						.title Asian Practice
 						.desc Throughout the global marketplace, Asian companies are seeking ways to address emerging trends and manage risk driven by economic uncertainty, and this can be especially challenging for Asian companies doing business in the United States.
-						a(href='what-we-do-asian-practice.html').details Details &gt;
+						a(href='what-we-do-asian.html').details Details &gt;
 					img(src="img/slide_asian.jpg", alt="")
 
 				.slide
