--- a/subpages/who-we-are-clients.jade
+++ b/subpages/who-we-are-clients.jade
@@ -29,6 +29,7 @@ block content
 				img(src='images/clients/07.png', alt='')
 				img(src='images/clients/08.png', alt='')
 				img(src='images/clients/09.png', alt='')
+				img(src='images/clients/10.png', alt='')
 				img(src='images/clients/11.png', alt='')
 				img(src='images/clients/12.png', alt='')
 				img(src='images/clients/13.png', alt='')
@@ -45,6 +46,7 @@ block content
 				img(src='images/clients/24.png', alt='')
 				img(src='images/clients/25.png', alt='')
 				img(src='images/clients/26.png', alt='')
+				img(src='images/clients/27.png', alt='')
 				img(src='images/clients/28.png', alt='')
 				img(src='images/clients/29.png', alt='')
 				img(src='images/clients/30.png', alt='')
@@ -52,6 +54,7 @@ block content
 				img(src='images/clients/32.png', alt='')
 				img(src='images/clients/33.png', alt='')
 				img(src='images/clients/34.png', alt='')
+				img(src='images/clients/35.png', alt='')
 				img(src='images/clients/36.png', alt='')
 				img(src='images/clients/37.png', alt='')
 				img(src='images/clients/38.png', alt='')
