--- a/subpages/who-we-are-testimonials.jade
+++ b/subpages/who-we-are-testimonials.jade
@@ -22,7 +22,7 @@ block content
 						p <small>Commerce, CA</small>
 
 					.right-col
-						p 	&ldquo;We depend on JC&amp;Company for many services. They are enormously helpful with our audits, reporting to our Korean parent company and communicating with the parent company auditors, Ernst &amp; Young.  Besides our auditing, JC&amp;Company also provides us with tax planning ideas when structuring our cross border transactions, as well as helping us to ensure compliance with U.S. tax law. I am happy to continue this successful relationship with them. Why haven&rsquo;t we considered other accounting firms in all these years?  Because JC&amp;Company gives us exceptional service. They are true experts in what they do and are very proactive.&rdquo;
+						p 	&ldquo;We depend on JC&amp;Company for many services. They are enormously helpful with our audits, reporting to our Korean parent company and communicating with the parent company auditors, PwC.  Besides our auditing, JC&amp;Company also provides us with tax planning ideas when structuring our cross border transactions, as well as helping us to ensure compliance with U.S. tax law. I am happy to continue this successful relationship with them. Why haven&rsquo;t we considered other accounting firms in all these years?  Because JC&amp;Company gives us exceptional service. They are true experts in what they do and are very proactive.&rdquo;
 						cite Kisoo Lee / President
 
 
